--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,29 @@
     "homepage": "http://www.pomm-project.org",
     "license":  "MIT",
     "authors":  [ { "name": "Grégoire HUBERT", "email": "hubert.greg@gmail.com", "homepage": "http://www.pomm-project.org" } ],
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../Foundation"
+        },
+        {
+            "type": "path",
+            "url": "../ModelManager"
+        }
+    ],
     "require": {
-        "php": ">=5.4.4",
+        "php": ">=8.1",
         "ext-pgsql": "*",
         "psr/log": "~1.0",
-        "pomm-project/foundation":    "~2.0",
-        "pomm-project/model-manager": "~2.0",
-        "symfony/console":            "~2.5|~3.0|~4.0|~5.0"
+        "pomm-project/foundation":    "dev-php_8_1",
+        "pomm-project/model-manager":  "dev-php_8_1",
+        "symfony/console":            "~6.0"
     },
     "require-dev": {
-        "atoum/atoum":        "^2.8 || ^3.0",
-        "symfony/filesystem": "~2.5|~3.0|~4.0"
+        "atoum/atoum":        "^4.0",
+        "symfony/filesystem": "~6.0",
+        "rector/rector": "^0.13.4",
+        "phpstan/phpstan": "^1.7"
     },
     "autoload": {
         "psr-4": {
@@ -28,6 +40,5 @@
             "PommProject\\Cli\\Test\\": "sources/tests"
         }
     },
-    "bin": ["bin/pomm.php"],
-    "minimum-stability": "stable"
+    "bin": ["bin/pomm.php"]
 }
