--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,11 @@
         "psr/log": "~1.0",
         "conserto/pomm-foundation":    "dev-main",
         "conserto/pomm-model-manager":  "dev-upgrade_php_8_1",
-        "symfony/console":            "~6.0"
+        "symfony/console": "~5.0|~6.0"
     },
     "require-dev": {
         "atoum/atoum":        "^4.0",
-        "symfony/filesystem": "~6.0",
+        "symfony/filesystem": "~5.0|~6.0",
         "phpstan/phpstan": "^1.7"
     },
     "autoload": {
