--- a/composer.json
+++ b/composer.json
@@ -10,14 +10,14 @@
         "php": ">=8.1",
         "ext-pgsql": "*",
         "psr/log": "~1.0",
-        "conserto/pomm-foundation": "3.0.x-dev",
-        "conserto/pomm-model-manager": "3.0.x-dev",
+        "conserto/pomm-foundation": "^3.0",
+        "conserto/pomm-model-manager": "^3.0",
         "symfony/console": "~5.0|~6.0"
     },
     "require-dev": {
         "atoum/atoum":        "^4.0",
         "symfony/filesystem": "~5.0|~6.0",
-        "phpstan/phpstan": "^1.7"
+        "phpstan/phpstan": "^1.8"
     },
     "autoload": {
         "psr-4": {
@@ -29,5 +29,6 @@
             "PommProject\\Cli\\Test\\": "sources/tests"
         }
     },
-    "bin": ["bin/pomm.php"]
+    "bin": ["bin/pomm.php"],
+    "minimum-stability": "stable"
 }
