--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
     "require": {
         "php": ">=8.1",
         "ext-pgsql": "*",
-        "psr/log": "~1.0",
+        "psr/log": "^2.0 || ^3.0",
         "conserto/pomm-foundation": "^3.0",
         "conserto/pomm-model-manager": "^3.0",
         "symfony/console": "~5.0|~6.0"
