--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version": "3.0.1",
+    "version": "3.0.2",
     "name": "conserto/pomm-cli",
     "type": "library",
     "description":  "Command line for Pomm.",
@@ -13,11 +13,11 @@
         "psr/log": "^2.0 || ^3.0",
         "conserto/pomm-foundation": "^3.0",
         "conserto/pomm-model-manager": "^3.0",
-        "symfony/console": "~5.0|~6.0"
+        "symfony/console": "~5.0|~6.0|~7.0"
     },
     "require-dev": {
         "atoum/atoum":        "^4.0",
-        "symfony/filesystem": "~5.0|~6.0",
+        "symfony/filesystem": "~5.0|~6.0|~7.0",
         "phpstan/phpstan": "^1.8"
     },
     "autoload": {
