--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "version": "3.0.1",
+    "version": "4.0.0",
     "name": "conserto/pomm-cli",
     "type": "library",
     "description":  "Command line for Pomm.",
@@ -8,17 +8,18 @@
     "license":  "MIT",
     "authors":  [ { "name": "Grégoire HUBERT", "email": "hubert.greg@gmail.com", "homepage": "http://www.pomm-project.org" } ],
     "require": {
-        "php": ">=8.1",
+        "php": ">=8.4",
         "ext-pgsql": "*",
         "psr/log": "^2.0 || ^3.0",
-        "conserto/pomm-foundation": "^3.0",
-        "conserto/pomm-model-manager": "^3.0",
-        "symfony/console": "~5.0|~6.0"
+        "conserto/pomm-foundation": "4.0.x-dev as 4.0",
+        "conserto/pomm-model-manager": "4.0.x-dev as 4.0",
+        "symfony/console": "~7.0"
     },
     "require-dev": {
         "atoum/atoum":        "^4.0",
-        "symfony/filesystem": "~5.0|~6.0",
-        "phpstan/phpstan": "^1.8"
+        "symfony/filesystem": "~7.0",
+        "phpstan/phpstan": "^2.0",
+        "rector/rector": "^2.0"
     },
     "autoload": {
         "psr-4": {
