--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,8 @@
         "php": ">=8.4",
         "ext-pgsql": "*",
         "psr/log": "^2.0 || ^3.0",
-        "conserto/pomm-foundation": "4.0.x-dev as 4.0",
-        "conserto/pomm-model-manager": "4.0.x-dev as 4.0",
+        "conserto/pomm-foundation": "^4.0",
+        "conserto/pomm-model-manager": "^4.0",
         "symfony/console": "~7.0"
     },
     "require-dev": {
